--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,6 +89,7 @@ jobs:
     name: Run E2E Tests
     runs-on: ubuntu-latest
     needs: test  # Only run if unit/integration tests pass
+    timeout-minutes: 30  # Prevent hung tests from running forever
 
     steps:
       - name: Checkout repository
@@ -109,7 +110,15 @@ jobs:
       - name: Start FastAPI server
         run: |
           python3 main.py &
-          sleep 5  # Wait for server to start
+          # Wait for server to be ready (max 30 seconds)
+          for i in {1..30}; do
+            if curl -s http://localhost:8000/ > /dev/null 2>&1; then
+              echo "Server is ready!"
+              break
+            fi
+            echo "Waiting for server... ($i/30)"
+            sleep 1
+          done
         env:
           PYTHONUNBUFFERED: 1
 
