--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -90,6 +90,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: test  # Only run if unit/integration tests pass
     timeout-minutes: 30  # Prevent hung tests from running forever
+    continue-on-error: true  # Don't fail CI if E2E tests fail/timeout
 
     steps:
       - name: Checkout repository
