Establish coding standards and configure tooling (Story 28.2)
- Create CODING-STANDARDS.md documenting naming conventions, PEP 8, imports, docstrings
- Configure Black formatter (pyproject.toml): line-length=100, target py311
- Configure Flake8 linter (.flake8): max-line-length=100, ignore E203/W503
- Configure isort (pyproject.toml): profile=black, known_first_party=src
- Update requirements-dev.txt with black>=23.0.0, flake8>=6.0.0, isort>=5.12.0
- Establish baseline: 50+ files need formatting, 758 flake8 violations, imports need sorting

Part of EPIC-028: Comprehensive Codebase Cleanup
Very low risk - configuration only, no code changes

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,5 +21,10 @@ pytest-xdist==3.5.0        # Parallel test execution
 pytest-timeout==2.2.0      # Test timeout management
 freezegun==1.4.0           # Mock datetime for testing
 
+# Code Quality Tools
+black>=23.0.0              # Code formatter
+flake8>=6.0.0              # Linter
+isort>=5.12.0              # Import sorter
+
 # Production Dependencies (also needed for testing)
 -r requirements.txt
